--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   animated_bottom_navigation_bar: ^1.3.3
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
